Added doc for legend.(area|plot).hideElemsOnClick.animDuration option

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                             <ul>
                                 <li>  <strong>enabled :</strong> (Boolean, default value : true) If true, map elements are hidden when user clicks on a label of the legend.</li>
                                 <li>  <strong>opacity :</strong> (Float, default value : 0.2) Opacity for the hidden elements.</li>
-                                </li>
+                                <li>  <strong>animDuration :</strong> (Integer, default value : 300) Number of milliseconds for the animation duration when hiding the matching elements from the map.</li>
                             </ul>
                         </li>
 
