Improved 'target' documentation

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                             </ul>
                         </li>
                         <li>  <strong>href :</strong> (String) Href for the elements.</li>
-                        <li>  <strong>target :</strong> (String) Target of the href for the elements.</li>
+                        <li>  <strong>target :</strong> (String) Target of the href for the elements (it can be set to a regular HTML target such as _blank, _self, ...).</li>
                         <li>  <strong>eventHandlers :</strong> (Object) Collection of handlers ('eventName' : function(e, id, mapElem, textElem, elemOptions) { ...}) that will be called when event 'eventName' occurs on elements. The key must match with a valid event like 'click' or 'dblclick' (<a href="http://jsfiddle.net/neveldo/qGwWr/" target="_blank">example 1</a>, <a href="http://jsfiddle.net/neveldo/b5fj4qod/" target="_blank">example 2</a>).</li>
                     </ul>
                 </li>
