Added doc for tooltip.overflow option

--- a/index.html
+++ b/index.html
@@ -217,6 +217,12 @@
                             <ul>
                                 <li>  <strong>content :</strong> (String) Tooltip content to display on mouse hover</li>
                                 <li>  <strong>cssClass :</strong> (String) Additional CSS class(es) of the tooltip container. This option can be set to a specific value for each area or plotted point.</li>
+                                <li>  <strong>overflow :</strong> (Object, default value : null) This option allows the tooltip to overflow from the right and/or bottom border of the container.
+	                                <ul>
+	                                    <li>right (boolean) : allows the tooltip to overflow from the right border of the container</li>
+	                                    <li>bottom (boolean) : allows the tooltip to overflow from the bottom border of the container</li>
+	                                </ul>
+                                </li>
                             </ul>
                         </li>
                         <li>  <strong>text :</strong> (Object) Options for the label displayed within or next to the element
