Added documentation for animDuration option of the 'zoom' event

--- a/index.html
+++ b/index.html
@@ -420,6 +420,7 @@
         <li>  <strong>y :</strong> (Integer) y coordinate of the point to focus on</li>
         <li>  <strong>latitude :</strong> (Float) latitude of the point to focus on</li>
         <li>  <strong>longitude :</strong> (Float) longitude of the point to focus on</li>
+        <li>  <strong>animDuration :</strong> (Int, default value : 0) The duration of the zoom animation</li>
     </ul>
 
     <p>The current zoom data can be retrieved with the data "ZoomLevel"</p>
