Updated default option override documentation

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
     <h2 id="api-reference"><a class="anchor" href="#api-reference">#</a>API reference (version 1.1.0)</h2>
 
-    <p>All options are provided as an object argument of the function $.fn.mapael(Object options). Many of them have a default value. Default values are stored in the variables $.fn.mapael.defaultOptions and $.fn.mapael.legendDefaultOptions. If you want to re-define them, you can overload these two variables.</p>
+    <p>All options are provided as an object argument of the function $.fn.mapael(Object options). Many of them have a default value. Default values are stored in the variables $.mapael.prototype.defaultOptions and $.mapael.prototype.legendDefaultOptions. If you want to re-define them, you can overload these two variables.</p>
     <p>Through these mapael options, you can load a map (such as the world map, the USA map, or your own map) and customize the attributes of areas (such as the background-color, the tooltip content, link, text, attributes on mouseover, jquery events, etc). You can plot points on the map by latitude and longitude or x and y and set their attributes. You can add curved links between two points. You can enable the zoom feature that allow to zoom the map through the buttons or through the mousewheel. You can define legends for areas and/or plotted points in order to apply automatically some attributes to the elements of the map depending on the associated value. Here is the complete API documentation.</p>
 
     <h3>Parameter 'options' : </h3>
