--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
                         <li>  <strong>enabled :</strong> (Boolean, default value : false) Set to true in order to enable zoom features on the map.</li>
                         <li>  <strong>mousewheel :</strong> (Boolean, default value : true) Set to true in order to enable the zoom on mousewheel. This option requires <a href="https://github.com/jquery/jquery-mousewheel" target="_blank">jQuery mousewheel dependencie to work</a>.</li>
                         <li>  <strong>touch :</strong> (Boolean, default value : true) Set to true in order to enable zoom and panning through touch actions.</li>
-                        <li>  <strong>maxLevel :</strong> (Integer, default value : 5) Maximum level that the user can set to zoom.</li>
+                        <li>  <strong>minLevel :</strong> (Integer, default value : 0) The minimum zoom level that the user can set.</li>
+                        <li>  <strong>maxLevel :</strong> (Integer, default value : 5) The maximum zoom level that the user can set.</li>
                         <li>  <strong>step :</strong> (Float, default value : 0.25) Zoom ratio between two levels.</li>
                         <li>  <strong>animDuration :</strong> (Int, default value : 200) The duration of the zoom animation (this option have to be set to 0 in order to disable animation).</li>
                         <li>  <strong>animEasing :</strong> (String, default value : "linear") The easing function to use to animate the zoom action.</li>
