Updated margin option documentation

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                                 <li>  <strong>attrs :</strong> (Object) Default Raphael attributes for each text within areas. Go to the <a href="http://raphaeljs.com/reference.html#Element.attr">Raphael reference</a> to view available options.</li>
                                 <li>  <strong>attrsHover :</strong> (Object) Default Raphael attributes on mouse hover for each text within areas. Go to the <a href="http://raphaeljs.com/reference.html#Element.attr">Raphael reference</a> to view available options. You can set the animation duration with the 'animDuration' option.</li>
                                 <li>  <strong>position :</strong> (String) Position of the text relative to the elements. Possible values : 'inner', 'right', 'left', 'top' or 'bottom'</li>
-                                <li>  <strong>margin :</strong> (Integer, default value : 10) Margin between the text and the plotted point</li>
+                                <li>  <strong>margin :</strong> (Integer or Object, default value : 10) Margin between the text and the plotted point. You can define a x,y margin by setting an object instead, eg : {x : 7, y: 9}. This margin object can also be used for a text within an area in order to apply an offset.</li>
                             </ul>
                         </li>
                         <li>  <strong>href :</strong> (String) Href for the elements.</li>
