Add svg transformation example

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
         <li><a href="source/examples/advanced/range_selection_areas.html" target="_blank">Map with a range selection for areas</a></li>
         <li><a href="source/examples/advanced/range_selection_plotted_cities.html" target="_blank">Map with a range selection for plotted cities</a></li>
         <li><a href="source/examples/advanced/zoom_on_click.html" target="_blank">Zoom on click example</a></li>
+        <li><a href="source/examples/advanced/transformations_on_svg_plots.html" target="_blank">Map with some transformations performed on SVG plotted points</a></li>
     </ul>
 
     <h2 id="api-reference"><a class="anchor" href="#api-reference">#</a>API reference (version 2.0.0)</h2>
