Add tooltip.offset.left and tooltip.offset.top documentation

--- a/index.html
+++ b/index.html
@@ -239,6 +239,12 @@
 	                                    <li>bottom (boolean) : allows the tooltip to overflow from the bottom border of the container</li>
 	                                </ul>
                                 </li>
+                                <li>  <strong>offset :</strong> (Object, default value : null) This option allows to set a custom offset value between the tooltip and the cursor.
+                                    <ul>
+                                        <li>left (int, default value : 10) : left offset value.</li>
+                                        <li>top (int, default value : 20) : top offset value.</li>
+                                    </ul>
+                                </li>
                             </ul>
                         </li>
                         <li>  <strong>text :</strong> (Object) Options for the label displayed within or next to the element
