--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-    <p style="text-align:center"><a href="https://github.com/neveldo/jQuery-Mapael/archive/2.0.0.zip" class="btn btn-default btn-download">Download version 2.0.0</a></p>
+    <p style="text-align:center"><a href="https://github.com/neveldo/jQuery-Mapael/archive/2.0.0.zip" class="btn btn-default btn-download">Download the latest version (2.0.0)</a></p>
 
     <hr>
 
