Fixed documentation for accessing zoom data

--- a/index.html
+++ b/index.html
@@ -478,11 +478,11 @@
 
     <p>The current zoom data can be retrieved with the data "ZoomLevel"</p>
 			<pre class="brush: js;">
-$(".mapContainer").data("zoomLevel");
-$(".mapContainer").data("panX");
-$(".mapContainer").data("panY");
-$(".mapContainer").data("zoomX");
-$(".mapContainer").data("zoomY");
+$(".mapContainer").data('mapael').zoomData.zoomLevel;
+$(".mapContainer").data('mapael').zoomData.zoomLevel;
+$(".mapContainer").data('mapael').zoomData.zoomLevel;
+$(".mapContainer").data('mapael').zoomData.zoomLevel;
+$(".mapContainer").data('mapael').zoomData.zoomLevel;
 			</pre>
 
     <p>Here are some examples of use of the "zoom" event : <a target="_blank" href="https://rawgit.com/neveldo/jQuery-Mapael/2.0.0/examples/advanced/zoom_event_on_specific_area.html">Zoom on specific areas</a>, <a target="_blank" href="https://rawgit.com/neveldo/jQuery-Mapael/2.0.0/examples/advanced/zoom_on_click.html">Zoom on click</a></p>
