Change URL schemes to https

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </ul>
     </div>
 
-    <p>jQuery Mapael is a <a href="http://jquery.com/">jQuery</a> plugin based on <a href="http://raphaeljs.com/">raphael.js</a> that allows you to display dynamic vector maps.  </p>
+    <p>jQuery Mapael is a <a href="https://jquery.com/">jQuery</a> plugin based on <a href="https://raphaeljs.com/">raphael.js</a> that allows you to display dynamic vector maps.  </p>
 
     <p>For example, with Mapael, you can display a map of the world with clickable countries. You can also build simple dataviz by setting some parameters in order to automatically set a color depending on a value to each area of your map and display the associated legend. Moreover, you can plot cities on the map with circles, squares or images by their latitude and longitude. Many more options are available, read the documentation in order to get a complete overview of mapael abilities.</p>
 
@@ -504,20 +504,20 @@ $(".mapContainer").data('mapael').zoomData.zoomLevel;
     <hr>
 
     <div class="footer">
-        <p>Copyright (C) 2013 - 2017 <a href="http://www.vincentbroute.fr">Vincent Brouté</a> - Released under <a href="http://www.opensource.org/licenses/mit-license.php">MIT license</a></p>
+        <p>Copyright (C) 2013 - 2017 <a href="https://www.vincentbroute.fr">Vincent Brouté</a> - Released under <a href="https://www.opensource.org/licenses/mit-license.php">MIT license</a></p>
     </div>
 
 </div> <!-- /container -->
 
 
-<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shCore.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushJScript.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushXml.min.js"></script>
 
-<script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.2/raphael-min.js" charset="utf-8" ></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.2/raphael-min.js" charset="utf-8" ></script>
 <script src="source/js/jquery.mapael.js" charset="utf-8" ></script>
 <script src="source/js/maps/world_countries.js" charset="utf-8" ></script>
 <script type="text/javascript" src="assets/js/main.js"></script>
