--- a/source/examples/advanced/update_event_for_refreshing_elements.html
+++ b/source/examples/advanced/update_event_for_refreshing_elements.html
@@ -83,10 +83,10 @@
         }
     </style>
 
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"
             charset="utf-8"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.4/raphael-min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.4/raphael-min.js" charset="utf-8"></script>
     <script src="../../js/jquery.mapael.js" charset="utf-8"></script>
     <script src="../../js/maps/france_departments.js" charset="utf-8"></script>
     <script src="../../js/maps/world_countries.js" charset="utf-8"></script>
@@ -145,7 +145,7 @@
                         latitude: 45.758888888889,
                         longitude: 4.8413888888889,
                         value: 700000,
-                        href: "http://fr.wikipedia.org/wiki/Lyon",
+                        href: "https://fr.wikipedia.org/wiki/Lyon",
                         tooltip: {content: "<span style=\"font-weight:bold;\">City :</span> Lyon"},
                         text: {content: "Lyon"}
                     },
@@ -156,7 +156,7 @@
                         longitude: -1.6808333333333,
                         tooltip: {content: "<span style=\"font-weight:bold;\">City :</span> Rennes"},
                         text: {content: "Rennes"},
-                        href: "http://fr.wikipedia.org/wiki/Rennes"
+                        href: "https://fr.wikipedia.org/wiki/Rennes"
                     }
                 }
             });
@@ -233,7 +233,7 @@
         </div>
     </div>
 
-    <p><b>All example for jQuery Mapael are available <a href="http://www.vincentbroute.fr/mapael/">here</a>.</b></p>
+    <p><b>All example for jQuery Mapael are available <a href="https://www.vincentbroute.fr/mapael/">here</a>.</b></p>
 
 </div>
 
