--- a/source/examples/basic/legend_images.html
+++ b/source/examples/basic/legend_images.html
@@ -45,10 +45,10 @@
         }
     </style>
 
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"
             charset="utf-8"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.4/raphael-min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.4/raphael-min.js" charset="utf-8"></script>
     <script src="../../js/jquery.mapael.js" charset="utf-8"></script>
     <script src="../../js/maps/france_departments.js" charset="utf-8"></script>
     <script src="../../js/maps/world_countries.js" charset="utf-8"></script>
@@ -76,7 +76,7 @@
                             label: "Value 1",
                             sliceValue: "Value 1",
                             type: "image",
-                            url: "http://www.neveldo.fr/mapael/assets/img/marker.png",
+                            url: "https://www.neveldo.fr/mapael/assets/img/marker.png",
                             width: 18,
                             height: 60,
                             attrsHover: {
@@ -86,7 +86,7 @@
                             label: "Value 2",
                             sliceValue: "Value 2",
                             type: "image",
-                            url: "http://www.neveldo.fr/mapael/assets/img/marker1.png",
+                            url: "https://www.neveldo.fr/mapael/assets/img/marker1.png",
                             width: 18,
                             height: 60,
                             attrsHover: {
@@ -172,7 +172,7 @@
 
     </div>
 
-    <p><b>All example for jQuery Mapael are available <a href="http://www.vincentbroute.fr/mapael/">here</a>.</b></p>
+    <p><b>All example for jQuery Mapael are available <a href="https://www.vincentbroute.fr/mapael/">here</a>.</b></p>
 
 </div>
 
