--- a/source/examples/basic/plotted_cities_areas.html
+++ b/source/examples/basic/plotted_cities_areas.html
@@ -43,10 +43,10 @@
         }
     </style>
 
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"
             charset="utf-8"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.4/raphael-min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.4/raphael-min.js" charset="utf-8"></script>
     <script src="../../js/jquery.mapael.js" charset="utf-8"></script>
     <script src="../../js/maps/france_departments.js" charset="utf-8"></script>
     <script src="../../js/maps/world_countries.js" charset="utf-8"></script>
@@ -116,7 +116,7 @@
                     // Image plot
                     'paris': {
                         type: "image",
-                        url: "http://www.neveldo.fr/mapael/assets/img/marker.png",
+                        url: "https://www.neveldo.fr/mapael/assets/img/marker.png",
                         width: 12,
                         height: 40,
                         latitude: 48.86,
@@ -210,7 +210,7 @@
         </div>
     </div>
 
-    <p><b>All example for jQuery Mapael are available <a href="http://www.vincentbroute.fr/mapael/">here</a>.</b></p>
+    <p><b>All example for jQuery Mapael are available <a href="https://www.vincentbroute.fr/mapael/">here</a>.</b></p>
 
 </div>
 
